welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: Missing closing brace `}' assumed here
def growFlowers() 
^FlowerPot:7: error: expected class or object definition
{
^FlowerPot:16: error: expected class or object definition
def faireFleurs(c:Color)
^FlowerPot:17: error: expected class or object definition
{
^